Fixed bug where units move 1 space less